[ailoader] Fix a warning